feat: new member

--- a/about.html
+++ b/about.html
@@ -1,43 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- Primary Meta Tags -->
-        <meta name="title" content="EN+AD - EN Architecture & Designs" />
-        <meta name="description" content="We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built." />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- Open Graph / Facebook -->
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://enarchitecture.in/" />
-        <meta property="og:title" content="EN+AD - EN Architecture & Designs" />
-        <meta property="og:description" content="We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built." />
-        <meta property="og:image" content="https://enarchitecture.in/assets/industries_internal/interiors/high_enad_residential/5_bunglow_at_ambivali.jpg" />
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="EN+AD - EN Architecture & Designs" />
+    <meta name="description"
+        content="We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built." />
 
-        <!-- Twitter -->
-        <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://enarchitecture.in/" />
-        <meta property="twitter:title" content="EN+AD - EN Architecture & Designs" />
-        <meta property="twitter:description" content="We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built." />
-        <meta property="twitter:image" content="https://enarchitecture.in/assets/industries_internal/interiors/high_enad_residential/5_bunglow_at_ambivali.jpg" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://enarchitecture.in/" />
+    <meta property="og:title" content="EN+AD - EN Architecture & Designs" />
+    <meta property="og:description"
+        content="We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built." />
+    <meta property="og:image"
+        content="https://enarchitecture.in/assets/industries_internal/interiors/high_enad_residential/5_bunglow_at_ambivali.jpg" />
 
-        <!-- google icons -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-        
-        <!-- google fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> -->
-        <!-- <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet"> -->
-        <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600&display=swap" rel="stylesheet">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://enarchitecture.in/" />
+    <meta property="twitter:title" content="EN+AD - EN Architecture & Designs" />
+    <meta property="twitter:description"
+        content="We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and un-built." />
+    <meta property="twitter:image"
+        content="https://enarchitecture.in/assets/industries_internal/interiors/high_enad_residential/5_bunglow_at_ambivali.jpg" />
 
-        <!-- css -->
-        <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
-        <link rel="stylesheet" href="main.css">
-        <title>About - EN+AD</title>
-    </head>
+    <!-- google icons -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600&display=swap" rel="stylesheet">
+
+    <!-- css -->
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="main.css">
+    <title>About - EN+AD</title>
+</head>
+
 <body class="category_page">
     <!-- header -->
     <header class="category_head">
@@ -80,21 +88,25 @@
             <div class="about_main">
                 <p class="about_main_head">About ENAD</p>
                 <p class="about_text">
-                    EN Architecture and Designs is a collaborative association of Architects and Designers that focuses on integrating intellect into the design.
+                    EN Architecture and Designs is a collaborative association of Architects and Designers that focuses
+                    on integrating intellect into the design.
                 </p>
                 <br>
                 <p class="about_text">
-                    We are a versatile architectural firm which provides all sorts of architectural solutions for a wide range of projects of various scales.
+                    We are a versatile architectural firm which provides all sorts of architectural solutions for a wide
+                    range of projects of various scales.
                 </p>
             </div>
             <div class="about_main">
                 <p class="about_main_head">Our Design Philosophy</p>
                 <p class="about_text">
-                    We, at EN+AD not only focus on user sensitive designs but also integrate comprehensive construction technology to get satisfactory end results.
+                    We, at EN+AD not only focus on user sensitive designs but also integrate comprehensive construction
+                    technology to get satisfactory end results.
                 </p>
                 <br>
                 <p class="about_text">
-                    Aesthetics, Innovation and Sustainability are the key components of our designs. However, we make sure that our spaces do not compromise on functionality and responsiveness.
+                    Aesthetics, Innovation and Sustainability are the key components of our designs. However, we make
+                    sure that our spaces do not compromise on functionality and responsiveness.
                 </p>
             </div>
         </div>
@@ -110,14 +122,7 @@
                     <p class="member_enad"><span class="enad_time">16</span><br>years at<br> ENAD</p>
                     <!-- <p class="member_exp">5 years experience</p> -->
                 </div>
-                <!-- team card -->
-                <div class="team_card">
-                    <img src="assets/about/raj_shah.jpeg" class="member_photo" alt="">
-                    <p class="member_name">Ar. Raj Shah </p>
-                    <p class="member_role">(Architect)</p>
-                    <p class="member_enad"><span class="enad_time">10</span><br>years at<br> ENAD</p>
-                    <!-- <p class="member_exp">5 years experience</p> -->
-                </div>
+
                 <!-- team card -->
                 <div class="team_card">
                     <img src="assets/about/atharva_nene.jpeg" class="member_photo" alt="">
@@ -128,10 +133,26 @@
                 </div>
                 <!-- team card -->
                 <div class="team_card">
+                    <img src="assets/about/vrushali_mehta.jpg" class="member_photo" alt="">
+                    <p class="member_name">Ar. Vrushali Mehta </p>
+                    <p class="member_role">(Architect)</p>
+                    <p class="member_enad"><span class="enad_time">04</span><br>years at<br> ENAD</p>
+                    <!-- <p class="member_exp">5 years experience</p> -->
+                </div>
+                <!-- team card -->
+                <div class="team_card">
                     <img src="assets/about/heli_patel.jpg" class="member_photo" alt="">
                     <p class="member_name">ID. Heli Patel </p>
                     <p class="member_role">(Interior Designer)</p>
                     <p class="member_enad"><span class="enad_time">04</span><br>years at<br> ENAD</p>
+                    <!-- <p class="member_exp">5 years experience</p> -->
+                </div>
+                <!-- team card -->
+                <div class="team_card">
+                    <img src="assets/about/raj_shah.jpeg" class="member_photo" alt="">
+                    <p class="member_name">Ar. Raj Shah </p>
+                    <p class="member_role">(Architect)</p>
+                    <p class="member_enad"><span class="enad_time">10</span><br>years at<br> ENAD</p>
                     <!-- <p class="member_exp">5 years experience</p> -->
                 </div>
             </div>
@@ -212,7 +233,8 @@
                         <p class="footer_logo">EN+AD</p>
                         <p class="footer_logo_full">Environment, Architecture & Designs</p>
                     </a>
-                    <p class="footer_info">We combine environment and architecture to create humane spaces that inspire and endure co-ordination between built and unbuilt.</p>
+                    <p class="footer_info">We combine environment and architecture to create humane spaces that inspire
+                        and endure co-ordination between built and unbuilt.</p>
                 </div>
                 <!-- footer links -->
                 <div class="footer_links_head_wrap">
@@ -238,8 +260,10 @@
                     <p class="footer_links_head">contact</p>
                     <div class="icon_contact">
                         <p class="material-symbols-outlined">apartment</p>
-                        <a href="https://maps.app.goo.gl/gX93NnLEbZvh36Wt8" target="_blank" class="footer_contact_detail footer_address">
-                            66 - Rajendra Nagar Scheme, Opposite Honda Solitaire, Dattapada Road, Borivali (E), Mumbai - 400066
+                        <a href="https://maps.app.goo.gl/gX93NnLEbZvh36Wt8" target="_blank"
+                            class="footer_contact_detail footer_address">
+                            66 - Rajendra Nagar Scheme, Opposite Honda Solitaire, Dattapada Road, Borivali (E), Mumbai -
+                            400066
                         </a>
                     </div>
                     <div class="icon_contact">
@@ -248,7 +272,8 @@
                     </div>
                     <div class="icon_contact">
                         <p class="material-symbols-outlined">mark_email_unread</p>
-                        <a href="mailto:info.enarchitecture@gmail.com" class="footer_contact_detail">info.enarchitecture@gmail.com</a>
+                        <a href="mailto:info.enarchitecture@gmail.com"
+                            class="footer_contact_detail">info.enarchitecture@gmail.com</a>
                     </div>
                 </div>
             </div>
@@ -258,7 +283,8 @@
                     <p class="company_details">&copy; EN Architecture & Designs
                         <script>document.write(new Date().getFullYear())</script>
                     </p>
-                    <p class="developer">Developed by: <a class="developer_link" href="https://pratit.dev/" target="_blank">Pratit Bangdiwala</a></p>
+                    <p class="developer">Developed by: <a class="developer_link" href="https://pratit.dev/"
+                            target="_blank">Pratit Bangdiwala</a></p>
                 </div>
             </div>
         </div>
@@ -274,4 +300,5 @@
     <!-- ********************************************************* -->
     <script src="js/about.js"></script>
 </body>
+
 </html>
